Anonymous | Login | 2021-01-26 06:10 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030948 | Open CASCADE | [OCCT] OCCT:Configuration | public | 2019-09-06 08:48 | 2019-09-15 10:55 | ||||
Reporter | abv | ||||||||
Assigned To | abv | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030948: Configuration, CMake - problem building with CMake 3.15.2 | ||||||||
Description | When configuring OCCT build with CMake 3.15.2 on Windows (target compilers tried VS 2019 and VS 2015), shortcut header files MainWindow.h and CommandWindow.h get generated in uppercase by CMake command configure_file (see adm/cmake/occt_macros.cmake, line 342). Then these files get removed because their names do not match anymore names of original headers: Info: (08:00:10) Create header-links in inc folder... Info: (08:00:17) Checking headers in inc folder... Warning. (COMMANDWINDOW) D:/ABV/OCCT/occt/win64/vc14/cmake/inc/COMMANDWINDOW.h is not used and will be removed from D:/ABV/OCCT/occt/win64/vc14/cmake/inc Warning. (MAINWINDOW) D:/ABV/OCCT/occt/win64/vc14/cmake/inc/MAINWINDOW.h is not used and will be removed from D:/ABV/OCCT/occt/win64/vc14/cmake/inc Info: (08:00:18) End the collecting The problem depends on particular names of the files: if I rename MainWindow.h by adding or removing single letter, no capitalization occurs. The problem is not reproduced with CMake 3.12.0. | ||||||||
Steps To Reproduce | 1. Configure OCCT build with CMake 2. Change name of some of shortcut header files in folder "inc" of the build directory to different case, e.g. "MainWindow.h" -> "a.h" -> "MAINWINDOW.h" 3. Start new instance of CMake-GUI 4. Run Configure ==> It will report MAINWINDOW.h as not part of OCCT and remove it (that's logical, OK) 5. Run Configure again ==> It will regenerate MAINWINDOW.h in uppercase and remove it again | ||||||||
Additional information and documentation updates | The problem is not reproduced after restart of CMake instance. The problem was triggered by the fact that my inc folder contained the problematic files in uppercase (the case of these files has been changed recently within 0030091). Apparently the CMake-GUI process (or a system) somewhere cached these names as uppercase, so that the old case was restored even after removal and consequent regeneration of these files. This is clearly a problem of CMake-GUI, but it does not seem really critical, so I suppose can be ignored for now. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | |||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0086835) git (administrator) 2019-09-06 08:55 |
Branch CR30948 has been created by abv. SHA-1: 0f8449c668fe775112ce0b42456c9537126019cb Detailed log of new commits: Author: abv Date: Fri Sep 6 08:52:03 2019 +0300 0030948: Configuration, CMake - problem building with CMake 3.15.2 Minor corrections in CMake procedures and include statements |
(0086915) abv (manager) 2019-09-07 11:20 |
The problem was caused by specific situation I had in my build directory (see above) and is caused by misbehavior of CMake-GUI. The problem is quite specific and is not expected to occur regularly; it can be avoided by running new instance of CMake-GUI and using clean build. Thus I propose to integrate some corrections I made during investigations (see branch CR30948) and close the issue. |
(0087102) git (administrator) 2019-09-15 10:55 |
Branch CR30948 has been deleted by inv. SHA-1: 0f8449c668fe775112ce0b42456c9537126019cb |
![]() |
|||
occt: master 3b80dc16
Timestamp: 2019-09-06 05:52:03 Author: abv Committer: abv [ Details ] [ Diff ] |
0030948: Configuration, CMake - problem building with CMake 3.15.2 Minor corrections in CMake procedures and include statements |
||
mod - adm/cmake/occt_macros.cmake | [ Diff ] [ File ] | ||
mod - src/Draw/CommandWindow.cxx | [ Diff ] [ File ] | ||
mod - src/Draw/MainWindow.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-09-06 08:48 | abv | New Issue | |
2019-09-06 08:48 | abv | Assigned To | => bugmaster |
2019-09-06 08:55 | git | Note Added: 0086835 | |
2019-09-06 16:28 | abv | Assigned To | bugmaster => abv |
2019-09-07 10:00 | abv | Relationship added | related to 0030091 |
2019-09-07 11:20 | abv | Note Added: 0086915 | |
2019-09-07 11:20 | abv | Assigned To | abv => bugmaster |
2019-09-07 11:20 | abv | Status | new => resolved |
2019-09-07 11:20 | abv | Steps to Reproduce Updated | View Revisions |
2019-09-07 11:20 | abv | Additional Information Updated | View Revisions |
2019-09-13 19:58 | bugmaster | Status | resolved => reviewed |
2019-09-14 10:57 | bugmaster | Status | reviewed => tested |
2019-09-15 10:51 | abv | Changeset attached | => occt master 3b80dc16 |
2019-09-15 10:51 | abv | Assigned To | bugmaster => abv |
2019-09-15 10:51 | abv | Status | tested => verified |
2019-09-15 10:51 | abv | Resolution | open => fixed |
2019-09-15 10:55 | git | Note Added: 0087102 |
Copyright © 2000 - 2021 MantisBT Team |