0030948: Configuration, CMake - problem building with CMake 3.15.2

Minor corrections in CMake procedures and include statements